# rust-skrf

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  test_output.txt
.agent/rules/: code-style-guide.md  rule.md
.github/workflows/: ci.yml
.serena/: project.yml
crates/skrf-core/: Cargo.toml
crates/skrf-core/benches/: network_derived.rs  time_domain.rs  vector_fitting.rs
crates/skrf-core/docs/: network_functions.md
crates/skrf-core/src/: constants.rs  frequency.rs  lib.rs  network.rs
crates/skrf-core/src/calibration/: mod.rs  solt.rs
crates/skrf-core/src/math/: conversions.rs  linalg.rs  matrix_ops.rs  mod.rs  simd.rs  transforms.rs
crates/skrf-core/src/network/: active.rs  connect.rs  core.rs  derived.rs  interpolation.rs  io.rs  mixed_mode.rs  mod.rs  noise.rs  operators.rs  params.rs  properties.rs  time_domain.rs
crates/skrf-core/src/touchstone/: mod.rs  parser.rs  writer.rs
crates/skrf-core/src/vector_fitting/: algorithms.rs  constants.rs  core.rs  mod.rs  model.rs  passivity.rs  poles.rs  spice.rs
crates/skrf-core/tests/: integration_tests.rs  test_io.rs  test_network_classifiers.rs  test_network_core.rs  test_network_derived.rs  test_network_interpolation.rs  test_network_operators.rs  test_network_params.rs  test_network_time_domain.rs  test_touchstone.rs  test_ts_spec.rs  test_vector_fitting.rs
crates/skrf-python/: Cargo.toml  README.md  pyproject.toml
crates/skrf-python/src/: frequency.rs  lib.rs  network.rs  vector_fitting.rs
crates/skrf-wasm/: Cargo.toml
crates/skrf-wasm/src/: frequency.rs  lib.rs  network.rs  vector_fitting.rs
docs/: architecture.md  code-review.md  python-api.md  wasm-api.md
