[workspace]
resolver = "2"
members = [
    "crates/skrf-core",
    "crates/skrf-wasm",
    "crates/skrf-python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["skrf-rust contributors"]
license = "BSD-3-Clause"
repository = "https://github.com/scikit-rf/skrf-rust"

[workspace.dependencies]
# Core dependencies
num-complex = "0.4"
ndarray = "0.16"
thiserror = "2.0"
rustfft = "6.2"
nalgebra = "0.33"

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
numpy = "0.23"

# WASM bindings  
wasm-bindgen = "0.2"
js-sys = "0.3"

# Testing
approx = "0.5"
