[package]
name = "skrf-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core RF/Microwave engineering library - Rust implementation of scikit-rf"

[features]
default = []
parallel = ["dep:rayon", "ndarray/rayon"]

[dependencies]
num-complex.workspace = true
ndarray.workspace = true
thiserror.workspace = true
rustfft.workspace = true
nalgebra.workspace = true
anyhow = "1.0"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
approx.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "network_derived"
harness = false

[[bench]]
name = "time_domain"
harness = false

[[bench]]
name = "vector_fitting"
harness = false
